--- a/d/de/des/destinytracker.com.html
+++ b/d/de/des/destinytracker.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the destinytracker.com privacy policy that was archived on 2017-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170620212612id_/http%3A//destinytracker.com/home/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the destinytracker.com privacy policy that was archived on 2017-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170812021240id_/http%3A//destinytracker.com/home/privacypolicy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><script src="https://js-agent.newrelic.com/nr-1039.min.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info = {"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"5dfabc9f6c","applicationID":"11014535","transactionName":"ZlBSMhcEWRdWUxFQC18afTAmSn8LWlUmVgpFR18KCQBFS0dCDE8FUkxACQkMVB0=","queueTime":0,"applicationTime":12,"ttGuid":"66B0A7DA1F9D8C0E","agent":""}</script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,SI:p.setImmediate,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1039.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
+<!DOCTYPE html><html><head>
 <title>
 Destiny Tracker Privacy Policy
 </title>
@@ -29,9 +29,9 @@ Destiny Tracker Privacy Policy
 <meta name="msapplication-TileImage" content="/Images/DestinyTracker/FavIcon/favicon-144.png">
 <meta name="msapplication-config" content="/Images/DestinyTracker/FavIcon/browserconfig.xml">
 <meta name="theme-color" content="#242527">
-<link href="/Content/bundled.min.css?cache=abc636334739192399025" rel="stylesheet">
+<link href="/Content/bundled.min.css?cache=636380406502102136" rel="stylesheet">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-<script src="//tags-cdn.deployads.com/a/destinytracker.com.js" async=""></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//tags-cdn.deployads.com/a/destinytracker.com.js" async=""></script>
 </head>
 <body class="site-destinytracker">
 <script type="application/ld+json">
@@ -49,19 +49,24 @@ Destiny Tracker Privacy Policy
     </script>
 <script src="/bundles/bootstrap?v=EUHJ5Fu1URHY6esXGud4YGUb_W2ENxpTjELhrMUvKbw1"></script>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-42280104-1', 'auto');
-    ga('send', 'pageview');
+        ga('create', 'UA-42280104-1', 'auto');
 
-    ga('create', 'UA-42280104-4', 'auto', { 'name': 'agg' });
-    ga('agg.send', 'pageview');
-</script>
+        if (typeof (ga_url_override) == 'undefined') {
+            ga('send', 'pageview');
+        } else {
+            ga('send', 'pageview', ga_url_override);
+        }
+
+        ga('create', 'UA-42280104-4', 'auto', { 'name': 'agg' });
+        ga('agg.send', 'pageview');
+    </script>
 <script>
         window.device = 'mobile';
         if (window.matchMedia !== undefined && window.matchMedia("(min-width: 750px)").matches) {
@@ -196,7 +201,7 @@ Destiny Tracker Privacy Policy
 <a href="/destiny/elo-leaderboards">Elo Leaderboards</a>
 </li>
 <li>
-<a href="/destiny/leaderboards/all/points?grouped=true&amp;page=1&amp;playlist=controlt">True Skill Leaderboards</a>
+<a href="/destiny/leaderboards/all/points?grouped=true&amp;page=1&amp;playlist=trialsofosiris">True Skill Leaderboards</a>
 </li>
 <li>
 <a href="/destiny/characters/top">Top Character Levels</a>
@@ -237,7 +242,7 @@ Destiny Tracker Privacy Policy
 </li>
 <li class="has-submenu ">
 <a href="#" onclick="return false;" class="submenu-btn">
-<span class="badge badge-important" style="background-color: #eee;border-radius: 3px;color: #111;margin-right:5px;" title="377 Currently Online in LFG">377</span> LFG <i class="ion ion-android-arrow-dropdown"></i>
+<span class="badge badge-important" style="background-color: #eee;border-radius: 3px;color: #111;margin-right:5px;" title="354 Currently Online in LFG">354</span> LFG <i class="ion ion-android-arrow-dropdown"></i>
 </a>
 <div class="submenu-container" id="lfg">
 <ul class="submenu">
@@ -249,7 +254,7 @@ Destiny Tracker Privacy Policy
 </li>
 <li>
 <a href="/destiny/lfg">Legacy Consoles</a>
-</li>
+ </li>
 </ul>
 </div>
 </li>
@@ -293,12 +298,9 @@ Destiny Tracker Privacy Policy
 </div>
 <div class="container">
 <div id="site-body" class="well" style="min-height: 730px;margin-top: 15px;">
-<div class="alert alert-bungie">We will be
-conducting general server maintenance today. Players should not be removed
-from any activities they are currently in.</div>
 <noscript>
-<div class="alert alert-danger">Javascript is disabled in your web browser. Destiny Tracker requires JavaScript to function properly.</div>
-</noscript>
+                <div class="alert alert-danger">Javascript is disabled in your web browser. Destiny Tracker requires JavaScript to function properly.</div>
+            </noscript>
 <div id="top-supportsite" style="width: 100%;display:none;margin-bottom:15px;margin: auto;">
 <div>
 <div style="width: 100%; background-color: rgba(0, 0, 0, .7); border: 1px solid #2a9fd6; text-align: center; margin-bottom: 20px;">
@@ -382,6 +384,13 @@ This document was last updated on October 02, 2014<br><br>
 </div>
 </div>
 </div>
+<script>
+                    if (window.device === 'desktop') {
+                        document.write('<div class="stanzacal" data-stanzacal="destinygame" data-site="destinytracker" data-width="100%" data-height="250px"></div>');
+                        document.write('\x3Cscript type="text/javascript" src="https://dff2h0hbfv6w4.cloudfront.net/scripts/embed-stanzacal-v1.js">\x3C/script>');
+                    }
+                </script><div class="stanzacal" data-stanzacal="destinygame" data-site="destinytracker" data-width="100%" data-height="250px"></div><script type="text/javascript" src="https://dff2h0hbfv6w4.cloudfront.net/scripts/embed-stanzacal-v1.js"></script>
+<a href="javascript:;" style="color:white;" class="pull-right" onclick="createCookie('nostanz', 'true', 365); window.location.reload();">Remove Stanz Calendar</a>
 </div>
 <div class="container">
 <footer class="site-footer">
@@ -464,7 +473,7 @@ This document was last updated on October 02, 2014<br><br>
         var added = 0;
         function checkNotifications() {
             $.ajax({
-                url: '//notifications.thetrackernetwork.com//api/notifications/?site=dtr&userName=207.241.231.45',
+                url: '//notifications.thetrackernetwork.com//api/notifications/?site=dtr&userName=54.165.90.203',
                 type: 'GET'
             })
             .success(function (results) {
@@ -489,7 +498,7 @@ This document was last updated on October 02, 2014<br><br>
                             before_close: function (PNotify, timer_hide) {
                                 $.ajax({
                                     url: '//notifications.thetrackernetwork.com//api/notifications',
-                                    data: { site: 'dtr', userName: '207.241.231.45', id: item.RowKey, type: item.type },
+                                    data: { site: 'dtr', userName: '54.165.90.203', id: item.RowKey, type: item.type },
                                     type: 'DELETE'
                                 });
                             }
