--- a/e/ez/ezy/ezybonds.com.html
+++ b/e/ez/ezy/ezybonds.com.html
@@ -1,26 +1,15 @@
-<!--The following is the downloaded HTML source of the ezybonds.com privacy policy that was archived on 2017-01-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170107193309id_/https%3A//www.ezybonds.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ezybonds.com privacy policy that was archived on 2017-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170812141925id_/http%3A//www.ezybonds.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Ezybonds Global Payments</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="Ezybonds Global Payments">
-	<meta name="google-translate-customization" content="dd7d2389b99af01-3d9a42431ca03b5d-gcff0cd6ac9923c13-10">
 	<link href="/favicon.ico" type="image/x-icon" rel="icon">
 	<link href="/extras/ezybonds_front.css" type="text/css" rel="stylesheet" media="screen">
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-41321165-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+	<!-- Localizer Integration Code -->
+	<script type="text/javascript" src="https://localizercdn.com/localizer.js"></script>
+	<script>Localizer.init({siteId: 587255543, cacheall: true, detectnew: true});</script>
 </head>
 
 <body bgcolor="white">
@@ -34,16 +23,10 @@
 <tr style="height: 120px;">
 	<td width="400" height="120"><img src="/images/1x1.gif" width="1" height="120" alt="spacer"></td>
 	<td width="310" align="left" valign="top" height="120">
-		<div id="google_translate_element"></div>
-		<script type="text/javascript">
-		function googleTranslateElementInit() {
-			new google.translate.TranslateElement({pageLanguage: 'en', autoDisplay: false}, 'google_translate_element');
-		}
-		</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		<div id="tbLanguageWidget"> </div>
 	</td>
-	<td width="150" height="120" valign="top" align="left"><a href="/login.asp"><img src="/images/login_small_blue.gif" alt="Login" height="30" width="140" border="0"></a></td>
-	<td width="160" height="120" valign="top" align="left"><a href="/members/account_new.asp"><img src="/images/join_small_new.gif" alt="Join Now" height="30" width="140" border="0"></a></td>
+	<td width="150" height="120" valign="top" align="left"><a href="https://www.ezybonds.com/login.asp"><img src="/images/login_small_blue.gif" alt="Login" height="30" width="140" border="0"></a></td>
+	<td width="160" height="120" valign="top" align="left"><a href="https://www.ezybonds.com/members/account_new.asp"><img src="/images/join_small_new.gif" alt="Join Now" height="30" width="140" border="0"></a></td>
 </tr>
 </tbody></table>
 
@@ -98,8 +81,12 @@
 
 	</td>
 </tr>
-<tr><td><img src="/images/1x1.gif" width="1" height="80" alt="spacer"></td></tr>
 </tbody></table>
+
+<br><br>
+<hr width="1020" height="1">
+<div align="center"><span class="small_text">© Copyright Ezybonds Inc 2000-2017</span></div>
+<br><br>
 
 </div>
 
