--- a/c/ch/cha/chatsociety.com.html
+++ b/c/ch/cha/chatsociety.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chatsociety.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606100134id_/http%3A//chatsociety.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chatsociety.com privacy policy that was archived on 2017-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170812224317id_/http%3A//www.chatsociety.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head><title>Free Chat Rooms Online</title>
 </head>
