--- a/h/hy/hyp/hypedojo.com.html
+++ b/h/hy/hyp/hypedojo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hypedojo.com privacy policy that was archived on 2017-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170608151252id_/http%3A//www.hypedojo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hypedojo.com privacy policy that was archived on 2017-08-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170813170001id_/http%3A//www.hypedojo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -14,15 +14,15 @@
 <link rel="stylesheet" type="text/css" href="http://www.hypedojo.com/assets/css/style.css">
 <meta property="fb:app_id" content="1865580817000858">
 <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script><script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
- 
+
 <script type="text/javascript">
 			_atrk_opts = { atrk_acct:"nLbzl1aAFUE0fn", domain:"hypedojo.com",dynamic: true};
 			
 			(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
 			
 		</script>
-<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=nLbzl1aAFUE0fn" style="display:none" height="1" width="1" alt=""/></noscript>
- 
+<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=nLbzl1aAFUE0fn" style="display:none" height="1" width="1" alt="" /></noscript>
+
 <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,7 +33,7 @@
 			ga('send', 'pageview');
 			
 		</script>
- 
+
 <script>
 			!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 			n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
@@ -44,10 +44,12 @@
 			fbq('init', '1023980997642446');
 			fbq('track', 'PageView');
 		</script>
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1023980997642446&ev=PageView&noscript=1"/></noscript>
- 
+<noscript><img height="1" width="1" style="display:none"
+			src="https://www.facebook.com/tr?id=1023980997642446&ev=PageView&noscript=1"
+			/></noscript>
+
 <meta name="csrf-name" content="csrf_token">
-<meta name="csrf-token" content="47e5475097560b8ee3bfd8c5c129e75a">
+<meta name="csrf-token" content="a9aa833a873305400cc3daabc984603d">
 </head>
 <body>
 <script>
@@ -136,7 +138,7 @@ Video
 </div>
 <div class="page-title col-md-12">
 <h2>
-Privacy </h2>
+Privacy	</h2>
 </div>
 <div class="row">
 <div class="col-md-12">
@@ -190,7 +192,7 @@ Copyright© 2016 Hype Media
 </div>
 </div>
 <div id="fb-root"></div>
- 
+
 <script type="text/javascript">
 			var _qevents = _qevents || [];
 			
@@ -208,11 +210,11 @@ Copyright© 2016 Hype Media
 			});
 		</script>
 <noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-JCnD-hGrpFVP1.gif" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
- 
+			<div style="display:none;">
+				<img src="//pixel.quantserve.com/pixel/p-JCnD-hGrpFVP1.gif" border="0" height="1" width="1" alt="Quantcast"/>
+			</div>
+		</noscript>
+
 
 <script type="text/javascript" src="http://www.hypedojo.com/assets/Embed.js" async=""></script>
 <script type="text/javascript" src="http://www.hypedojo.com/assets/js/bootstrap.min.js" async=""></script>
