--- a/w/we/web/website.com.html
+++ b/w/we/web/website.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the website.com privacy policy that was archived on 2017-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170629025716id_/https%3A//www.website.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the website.com privacy policy that was archived on 2017-08-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170814202241id_/https%3A//www.website.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -8,9 +8,9 @@
 <meta name="description" content="Website.com's privacy policy.">
 <title>Privacy policy — Website.com</title>
 <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic,800,800italic,300,300italic|Open+Sans+Condensed:300,300italic,700|Heebo:100,300,400,500,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="/style/core-pack.css?20170626110421">
+<link rel="stylesheet" type="text/css" href="/style/core-pack.css?20170731104540">
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="/style/coreIE.css?20170626110421">
+<link rel="stylesheet" type="text/css" href="/style/coreIE.css?20170731104540">
 <![endif]-->
 <link rel="shortcut icon" href="/favicon.ico">
 
@@ -25,7 +25,7 @@
 			<div class="topbarItems">
 				<div id="site-logo"><a href="/" title="Website.com Website Builder"><span>Website.com Website Builder</span></a></div>
 				<ul>
-					<li><a id="support-contactus" href="/contact-us/" title="Contact Us">Contact Us</a></li>
+					<li id="topbarItems-contactus"><a id="support-contactus" href="/contact-us/" title="Contact Us">Contact Us</a></li>
 					
 					<li><a title="Live Chat" href="#" class="liveChatApp"><span><i></i>Live Chat</span></a></li>
 					
@@ -115,13 +115,8 @@
 	
 	<li><a href="/website-templates/" class="websiteTemplatePath" title="Templates">Templates</a></li>
 	<li><a href="/ecommerce/" title="Ecommerce">Ecommerce</a></li>
-	<li class="hasSubmenu ">
-		<a href="#" title="Marketing">Marketing <i></i></a>
-		<ul class="submenu">
-			<li><a href="/seo/" title="Easy SEO">Easy SEO</a></li>
-			<li><a href="/ab-testing/" title="A/B Testing">A/B Testing</a></li>
-		</ul>
-	</li>
+	
+	<li><a href="/seo/" title="Easy SEO">Easy SEO</a></li>
 	
 	<li><a href="/pricing/" title="Subscriptions">Subscriptions</a></li>
 	<li><a href="/resources/" title="Resources">Resources</a></li>
@@ -138,7 +133,7 @@
 <div id="site-header-footer"></div>
 <div id="site-body">
 
-<link rel="stylesheet" type="text/css" href="/style/terms.css?20170626110421">
+<link rel="stylesheet" type="text/css" href="/style/terms.css?20170731104540">
 <div class="wrapper wrapperPadding">
 <h1>Website.com Privacy Policy</h1>
 <small>Last modified: September 28, 2016</small>
@@ -237,7 +232,7 @@
 <div id="site-footer">
 	<div class="wrapper clearfix">
 		
-<ul id="footer-links" class="clearfix">
+<ul id="footer-links" class="clearfix" data-currenttime="0" data-pagetime="90" data-sitetime="180">
 	<li class="columns col1">
 		<input type="checkbox" name="1colLabel" id="1colLabel">
 		<label class="colTop" for="1colLabel">Product<i></i></label>
@@ -346,17 +341,18 @@
 	}());
 </script>
 
+
 	</div>
 </div>
 <a href="#" class="backToTop"><span><i></i>TOP</span></a>
-<script type="text/javascript" src="/js/jquery-1.11.2.min.js?20170626110421"></script>
-<script type="text/javascript" src="/js/jquery-migrate-1.1.1.min.js?20170626110421"></script>
-<link rel="stylesheet" type="text/css" href="/js/jquery-ui/css/smoothness/jquery-ui-1.10.3.custom.min.css?20170626110421">
-<script type="text/javascript" src="/js/jquery-ui/js/jquery-ui-1.10.3.min.js?20170626110421"></script>
-<script type="text/javascript" src="/js/core-plugin-pack.js?20170626110421"></script>
-<script type="text/javascript" src="/js/main.js?20170626110421"></script>	
+<script type="text/javascript" src="/js/jquery-1.11.2.min.js?20170731104540"></script>
+<script type="text/javascript" src="/js/jquery-migrate-1.1.1.min.js?20170731104540"></script>
+<link rel="stylesheet" type="text/css" href="/js/jquery-ui/css/smoothness/jquery-ui-1.10.3.custom.min.css?20170731104540">
+<script type="text/javascript" src="/js/jquery-ui/js/jquery-ui-1.10.3.min.js?20170731104540"></script>
+<script type="text/javascript" src="/js/core-plugin-pack.js?20170731104540"></script>
+<script type="text/javascript" src="/js/main.js?20170731104540"></script>	
 
-<script type="text/javascript" src="/js/livechat.js?20170626110421"></script>
+<script type="text/javascript" src="/js/livechat.js?20170731104540"></script>
 
 
 
