--- a/m/my/mym/mymusictools.com.html
+++ b/m/my/mym/mymusictools.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mymusictools.com privacy policy that was archived on 2017-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170615221051id_/http%3A//mymusictools.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mymusictools.com privacy policy that was archived on 2017-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170815101935id_/https%3A//www.mymusictools.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
