--- a/e/er/era/erasmusplusols.eu.html
+++ b/e/er/era/erasmusplusols.eu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the erasmusplusols.eu privacy policy that was archived on 2017-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170615170151id_/http%3A//erasmusplusols.eu/privacy-statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the erasmusplusols.eu privacy policy that was archived on 2017-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170815234401id_/https%3A//erasmusplusols.eu/privacy-statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><head>
     <meta charset="utf-8">
@@ -8,7 +8,6 @@
 
 <link rel="stylesheet" href="http://erasmusplusols.eu/app/plugins/sitepress-multilingual-cms/res/css/language-selector.css?v=3.1.9.7" type="text/css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     		<script src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 			window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"\/wp\/wp-includes\/js\/wp-emoji-release.min.js"}};
 			!function(a,b,c){function d(a){var c=b.createElement("canvas"),d=c.getContext&&c.getContext("2d");return d&&d.fillText?(d.textBaseline="top",d.font="600 32px Arial","flag"===a?(d.fillText(String.fromCharCode(55356,56812,55356,56807),0,0),c.toDataURL().length>3e3):(d.fillText(String.fromCharCode(55357,56835),0,0),0!==d.getImageData(16,16,1,1).data[0])):!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g;c.supports={simple:d("simple"),flag:d("flag")},c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.simple&&c.supports.flag||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
@@ -65,10 +64,10 @@ img.emoji {
 <script>window.jQuery || document.write('<script src="http://erasmusplusols.eu/app/themes/erasmus/assets/js/vendor/jquery-1.11.0.min.js"><\/script>')</script><script src="http://erasmusplusols.eu/app/themes/erasmus/assets/js/vendor/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//assets.juicer.io/embed-no-jquery.js"></script>
 <script type="text/javascript" src="http://p.jwpcdn.com/6/12/jwplayer.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.0/modernizr.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.0/jquery.jcarousel.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.0/modernizr.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.0/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
 <script type="text/javascript" src="/app/themes/erasmus/assets/js/main.js"></script>
 <script type="text/javascript" src="/app/themes/erasmus/assets/js/detect_timezone.js"></script>
 <script type="text/javascript">
