--- a/j/ju/juc/jucaa.com.html
+++ b/j/ju/juc/jucaa.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the jucaa.com privacy policy that was archived on 2016-03-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160320234043id_/http%3A//www.jucaa.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jucaa.com privacy policy that was archived on 2017-08-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170816153719id_/http%3A//www.jucaa.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><script src="https://js-agent.newrelic.com/nr-892.min.js"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(e,t){return function(){o(e,[(new Date).getTime()].concat(a(arguments)),null,t)}}var o=e("handle"),i=e(2),a=e(3);"undefined"==typeof window.newrelic&&(newrelic=NREUM);var u=["setPageViewName","addPageAction","setCustomAttribute","finished","addToTrace","inlineHit"],c=["addPageAction"],f="api-";i(u,function(e,t){newrelic[t]=r(f+t,"api")}),i(c,function(e,t){newrelic[t]=r(f+t)}),t.exports=newrelic,newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),o("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(0>o?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?u(e,a,i):i()}function n(n,r,o){e&&e(n,r,o);for(var i=t(o),a=l(n),u=a.length,c=0;u>c;c++)a[c].apply(i,r);var s=f[g[n]];return s&&s.push([m,n,r,i]),i}function p(e,t){w[e]=l(e).concat(t)}function l(e){return w[e]||[]}function d(e){return s[e]=s[e]||o(n)}function v(e,t){c(e,function(e,n){t=t||"feature",g[n]=t,t in f||(f[t]=[])})}var w={},g={},m={on:p,emit:n,get:d,listeners:l,context:t,buffer:v};return m}function i(){return new r}var a="nr@context",u=e("gos"),c=e(2),f={},s={},p=t.exports=o();p.backlog=f},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!w++){var e=v.info=NREUM.info,t=s.getElementsByTagName("script")[0];if(e&&e.licenseKey&&e.applicationID&&t){c(l,function(t,n){e[t]||(e[t]=n)});var n="https"===p.split(":")[0]||e.sslForHttp;v.proto=n?"https://":"http://",u("mark",["onload",a()],null,"api");var r=s.createElement("script");r.src=v.proto+e.agent,t.parentNode.insertBefore(r,t)}}}function o(){"complete"===s.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=window,s=f.document;NREUM.o={ST:setTimeout,XHR:f.XMLHttpRequest,REQ:f.Request,EV:f.Event,PR:f.Promise,MO:f.MutationObserver},e(1);var p=(""+location).split("?")[0],l={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-892.min.js"},d=window.XMLHttpRequest&&XMLHttpRequest.prototype&&XMLHttpRequest.prototype.addEventListener&&!/CriOS/.test(navigator.userAgent),v=t.exports={offset:a(),origin:p,features:{},xhrWrappable:d};s.addEventListener?(s.addEventListener("DOMContentLoaded",i,!1),f.addEventListener("load",r,!1)):(s.attachEvent("onreadystatechange",o),f.attachEvent("onload",r)),u("mark",["firstbyte",a()],null,"api");var w=0},{}]},{},["loader"]);</script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Privacy Policy - ScreenTub</title>
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta name="google-site-verification" content="4g43y_P2KRDwrTz7bvnquAgHjpmEno1xJhV02XlKt6Y">
@@ -13,8 +13,8 @@
 <meta name="revisit-after" content="1 day">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/sites/default/files/toasted_favicon_0.png" type="image/x-icon">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_ddfae6efa2ed5743662dfc6691d83a7e.emimage.css">
-<script type="text/javascript" src="/sites/default/files/js/js_2df1f37348680ae4a21f405b091704ab.jsmin.js"></script>
+<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_7a683f91d4027442fa9214b18c660079.emimage.css">
+<script type="text/javascript" src="/sites/default/files/js/js_3f718f6d35bbff575a5ce3d8b6b80954.jsmin.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"},"popups":{"originalPath":"node\/4","defaultTargetSelector":"#ajax-pop","modulePath":"sites\/all\/modules\/popups","autoCloseFinalMessage":1}});
@@ -72,7 +72,9 @@ $(function() {
 </a>
 </div></td>
 <td width="42%" class="autokeyword">
-<style type="text/css">@import url(http://www.google.com/cse/api/branding.css);</style>
+<style type="text/css">
+	@import url(http://www.google.com/cse/api/branding.css);
+	</style>
 <div class="cse-branding-right" style="background-color:#FFFFFF;color:#000000">
 <div class="cse-branding-form">
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
@@ -145,7 +147,9 @@ $(function() {
 <div id="footer">
 <table width="100%"><tbody><tr>
 <td width="50%" class="autokeyword">
-<style type="text/css">@import url(http://www.google.com/cse/api/branding.css);</style>
+<style type="text/css">
+	@import url(http://www.google.com/cse/api/branding.css);
+	</style>
 <div class="cse-branding-right" style="background-color:#FFFFFF;color:#000000">
 <div class="cse-branding-form">
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
@@ -182,13 +186,14 @@ $(function() {
 </tr></tbody></table>
 <div class="float_clear"></div>
 </div>
-<script type="text/javascript" src="/sites/default/files/js/js_100fef00cf404984365663dd60404c46.jsmin.js"></script>
+<script type="text/javascript" src="/sites/default/files/js/js_608e4e92ab58657b96e02e27228a82d0.jsmin.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 try{var pageTracker = _gat._getTracker("UA-33222487-1");pageTracker._trackPageview();} catch(err) {}
 //--><!]]>
 </script>
 </div>
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"5f5f47e0c1","applicationID":"3885789","transactionName":"NlQDN0sCDBECARcMDA8eIABNCg0MTAwMAQY+QQAEXDwUCwYV","queueTime":0,"applicationTime":863,"atts":"GhMAQQMYHx8=","errorBeacon":"bam.nr-data.net","agent":""}</script>
+
+
 
 </body></html>
